--- a/index.css
+++ b/index.css
@@ -213,7 +213,6 @@ body {
 }
 .container main .main-container .main-focus-container .main-focus-ready #mainFocusText {
     color: white;
-    /* text-decoration: line-through; */
     margin: 20px 20px;
     font-size: 32px;
 }
@@ -315,6 +314,8 @@ body {
 }
 .container footer .footer-center .quote-container .quote {
     position: absolute;
+    width: 544px;
+    text-align: center;
     bottom: 0px;
     margin: 0px;
     font-weight: 300;
