--- a/index.css
+++ b/index.css
@@ -57,18 +57,19 @@ body {
 }
 .container header .header-container .header-left .links .links-dropdown {
     display: none;
-}
-.container header .header-container .header-left .links:hover .links-dropdown {
-    display: block;
     position: absolute;
+    left: 5px;
     background-color: #222222c9;
     width: 200px;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 .container header .header-container .header-left .links .links-dropdown ul {
     list-style-type: none;
     margin-left: 20px;
     padding: 0;
+}
+.container header .header-container .header-left .links .links-dropdown ul li {
+    padding: 2px 0px;
 }
 .container header .header-container .header-left .links .links-dropdown ul li a {
     color: #bdbdbd;
@@ -77,7 +78,21 @@ body {
     font-weight: 600;
     transition: 0.3s;
 }
+.container header .header-container .header-left .links .links-dropdown ul li a div button {
+    transition: 0.2s;
+}
+.container header .header-container .header-left .links .links-dropdown ul li a div:hover .remove-bookmark{
+    opacity: 1;
+}
 .container header .header-container .header-left .links .links-dropdown ul li a:hover {
+    color: #ffffff;
+}
+#addBookmarkButton {
+    transition: 0.2s;
+    padding: 2px;
+    color: #ffffff8f;
+}
+#addBookmarkButton:hover {
     color: #ffffff;
 }
 .container header .header-container .header-left .searchbar {
