--- a/index.css
+++ b/index.css
@@ -78,8 +78,11 @@ body {
     font-weight: 600;
     transition: 0.3s;
 }
-.container header .header-container .header-left .links .links-dropdown ul li a div button {
+.container header .header-container .header-left .links .links-dropdown ul li button {
     transition: 0.2s;
+}
+.container header .header-container .header-left .links .links-dropdown ul li button:hover i {
+    color: #ffffff;
 }
 .container header .header-container .header-left .links .links-dropdown ul li a div:hover .remove-bookmark{
     opacity: 1;
