--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ body {
 * {
     cursor: default;
 }
-button, i {
+button, i, input {
     cursor: pointer;
 }
 .container {
@@ -227,8 +227,14 @@ button, i {
     color: #ffffff;
     background-color: rgba(0, 0, 0, 0);
     border: none;
-    border-bottom: 1px solid white;
+    border-bottom: 2px solid white;
     outline: none;
+    opacity: 0.8;
+    transition: 300ms;
+}
+.container main .main-container .main-focus-container .main-focus-set .focus-input input:focus {
+    border-bottom: 2px solid white;
+    opacity: 1;
 }
 .container main .main-container .main-focus-container .main-focus-ready {
     display: none;
@@ -386,15 +392,21 @@ button, i {
     outline: none;
     cursor: pointer;
 }
-.container footer .footer-right button:hover {
+/* .container footer .footer-right button:hover {
     transform: scale(1.2);
     transition: 0.2s;
-}
+} */
 .container footer .footer-right .todo-container{
     display: none;
+    position: absolute;
+    bottom: 50px;
+    right: 10px;
+    background-color: rgba(0, 0, 0, 0.90);
+    border-radius: 5px;
 }
-.container footer .footer-right button:hover .todo-container {
-    display: block;
+.container footer .footer-right .todo-container .todo-list {
+    list-style-type: none;
+    padding: 0;
 }
 
 
@@ -438,57 +450,8 @@ button, i {
         width: 100px;
     }
 }
+
 @keyframes clocks {
     from {opacity: 1;}
     to {opacity: 0.7;}
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* .container footer .footer-right button:hover .todo-container {
-    display: block;
-}
-.container footer .todo-container {
-    position: absolute;
-    width: 500px;
-    display: none;
-}
-.container footer .todo-container .todo {
-    position: absolute;
-    justify-self: auto;
-    right: 0;
-    bottom: 102;
-}
-.container footer .todo-container .todo ul {
-    list-style-type: none;
-}
-.container footer .todo-container .todo ul li {
-    display: flex;
-    padding: 5px 0px;
-}
-.container footer .todo-container .todo ul li span {
-    padding-right: 10px;
-    font-weight: 600;
-    padding-left: 10px;
-    color: #ffffff;
-}
-.container footer .todo-container .todo ul li .checkbox {
-    padding-right: 100px;
-    background-color: #00000000;
-    border: 3px solid #ffffff;
-} */
