--- a/index.css
+++ b/index.css
@@ -401,12 +401,16 @@ button, i, input {
     position: absolute;
     bottom: 50px;
     right: 10px;
+    min-height: 200px;
+    max-height: 400px;
+    min-width: 250px;
+    max-width: 300px;
     background-color: rgba(0, 0, 0, 0.90);
     border-radius: 5px;
 }
 .container footer .footer-right .todo-container .todo-list {
     list-style-type: none;
-    padding: 0;
+    padding-left: 10px;
 }
 
 
